added request method

--- a/templates/accounts/sign_in.html
+++ b/templates/accounts/sign_in.html
@@ -24,7 +24,7 @@
 			  </div>
 			  <div class="form-group">
 			    <label for="pwd">PASSWORD</label>
-			    <input type="password" name="pwd" class="form-control input"  value="">
+			    <input type="password" name="password" class="form-control input"  value="">
 			  </div>
 			  <button type="submit" class="btn btn-block tetiary-btn">Sign in</button><br>
 			  <a href="{% url 'recover_password' %}" class="text-center">Forgot Password?</a>
