fix:styled the templates

--- a/static/assets/sass/style.scss
+++ b/static/assets/sass/style.scss
@@ -19,6 +19,9 @@
 @import 'pages/auth';
 @import 'dashboard/index';
 @import 'pages/configure-blog-api';
+@import 'pages/api_getstarted';
+@import 'pages/api-reference';
+@import 'pages/api-tutorial';
 
 //Individual Documentation 
 @import 'pages/documentation';
