--- a/templates/api_docs/comment_api/comment_doc.html
+++ b/templates/api_docs/comment_api/comment_doc.html
@@ -1,5 +1,7 @@
-
 <!-- Get started tab -->
+{% extends 'api_docs/comment_api/docs_base.html' %}
+
+{% block content  %}
 
 {% include 'api_docs/comment_api/api_get_started.html' %}
 
@@ -15,6 +17,4 @@
 
 {% include 'api_docs/comment_api/api_tutorial.html' %}
 
-
-
-
+{% endblock %}
