--- a/staticfiles/assets/sass/_layout.scss
+++ b/staticfiles/assets/sass/_layout.scss
@@ -35,7 +35,7 @@ header {
     ul {
       display: flex;
       list-style: none;
-      justify-content: flex-start;
+      justify-content: space-between;
       align-items: center;
       margin: 0em;
       width: 100%;
