--- a/templates/api_docs/comment_api/docs_base.html
+++ b/templates/api_docs/comment_api/docs_base.html
@@ -23,17 +23,17 @@
     <div class="container">
       <div class="row pt-4 pb-4 header__wrapper">
         <div class="col-lg-2 col-md-6 col-sm-6 logo__container">
-          <a href="{% url 'index' %}"  class="logo"><img src="{% static 'img/logo.svg' %}" alt="site logo"></a>
+          <a href="{% url 'index' %}" class="logo"><img src="{% static 'img/logo.svg' %}" alt="site logo"></a>
         </div>
 
         <nav class="col-lg-6">
-			  <ul class="nav__menu">
-			  <li><a href="{% url 'index' %}" >Home</a></li>
-			  <li><a href="{% url 'about' %}">About us</a></li>
-			  <li><a href="{% url 'contact' %}">Contact us</a></li>
-			  <li><a href="{% url 'commentdocs' %}">Documentation</a></li>
-			</ul>
-		  </nav>
+          <ul class="nav__menu">
+            <li><a href="{% url 'index' %}">Home</a></li>
+            <li><a href="{% url 'about' %}">About us</a></li>
+            <li><a href="{% url 'contact' %}">Contact us</a></li>
+            <li><a href="{% url 'commentdocs' %}">Documentation</a></li>
+          </ul>
+        </nav>
 
         <div class="col-lg-4 menu__button__container">
           <a href="{% url 'signin' %}" button class="secondary-btn">Sign In</button></a>
@@ -59,7 +59,7 @@
               </div>
 
               <ul class="mobile__nav__menu">
-                <li><a href="{% url 'index' %}" ><b>Home</b></a></li>
+                <li><a href="{% url 'index' %}"><b>Home</b></a></li>
                 <li><a href="{% url 'about' %}"><b>About us</b></a></li>
                 <li><a href="{% url 'contact' %}"><b>Contact us</b></a></li>
                 <li><a href="{% url 'commentdocs' %}"><b>Documentation</b></a></li>
@@ -154,18 +154,18 @@
     <div class="ms-links-div">
 
       <div class="row1">
-        <a href="#" class="ms-links active">Introduction</a>
+        <a href="#" class="tab ms-links active" onclick="currentTab(1)">Introduction</a>
 
-        <a href="#" class="ms-links">API Reference</a>
+        <a href="#" class="tab ms-links" onclick="currentTab(2)">API Reference</a>
 
-        <a href="#" class="ms-links">Endpoints</a>
+        <a href="#" class="tab ms-links" onclick="currentTab(3)">Endpoints</a>
 
       </div>
 
       <div class="row2">
         <!-- <a href="#" class="ms-links">Video Guide</a> -->
 
-        <a href="#" class="ms-links">Tutorial</a>
+        <a href="#" class=" tab ms-links" onclick="currentTab(4)">Tutorial</a>
 
       </div>
 
@@ -204,7 +204,7 @@
   <!-- Header ends here -->
 
   {% block content %}
-  
+
   {% endblock %}
 
   <!-- Normal Page Goes Here -->
@@ -260,6 +260,6 @@
   <script src="{% static 'js/doc.js' %}"></script>
 
 
-  </body>
+</body>
 
 </html>
