--- a/templates/user_dashboard/dashboard.html
+++ b/templates/user_dashboard/dashboard.html
@@ -125,7 +125,7 @@
                             </p>
                           </div>
                           <div class="api__box__buttons">
-                            <a href="{% url 'configure_api' %}"><button class="primary-btn">Configure</button></a>
+                            <a href="{% url 'dashboard:configure_api' %}"><button class="primary-btn">Configure</button></a>
                             <!-- <input type="radio" name="" id=""> -->
                             <!-- success -->
                             <div class="prindex.html pretty p-default p-round p-toggle">
@@ -183,7 +183,7 @@
                             </p>
                           </div>
                           <div class="api__box__buttons">
-                            <a href="{% url 'configure_api' %}"><button class="secondary-btn">+ Add API</button></a>
+                            <a href="{% url 'dashboard:configure_api' %}"><button class="secondary-btn">+ Add API</button></a>
                             <!-- <input type="radio" name="" id=""> -->
                             <!-- success -->
                             <div class="prindex.html pretty p-default p-round p-toggle">
@@ -225,7 +225,7 @@
                             </p>
                           </div>
                           <div class="api__box__buttons">
-                            <a href="{% url 'configure_api' %}"><button class="secondary-btn">+ Add API</button></a>
+                            <a href="{% url 'dashboard:configure_api' %}"><button class="secondary-btn">+ Add API</button></a>
                             <!-- <input type="radio" name="" id=""> -->
                             <!-- success -->
                             <div class="prindex.html pretty p-default p-round p-toggle">
@@ -267,7 +267,7 @@
                             </p>
                           </div>
                           <div class="api__box__buttons">
-                            <a href="{% url 'configure_api' %}"><button class="secondary-btn">+ Add API</button></a>
+                            <a href="{% url 'dashboard:configure_api' %}"><button class="secondary-btn">+ Add API</button></a>
                             <!-- <input type="radio" name="" id=""> -->
                             <!-- success -->
                             <div class="prindex.html pretty p-default p-round p-toggle">
@@ -309,7 +309,7 @@
                             </p>
                           </div>
                           <div class="api__box__buttons">
-                            <a href="{% url 'configure_api' %}"><button class="secondary-btn">+ Add API</button></a>
+                            <a href="{% url 'dashboard:configure_api' %}"><button class="secondary-btn">+ Add API</button></a>
                             <!-- <input type="radio" name="" id=""> -->
                             <!-- success -->
                             <div class="prindex.html pretty p-default p-round p-toggle">
