--- a/templates/accounts/sign_in.html
+++ b/templates/accounts/sign_in.html
@@ -14,13 +14,12 @@
 		  <br>
 			<form method="POST" id="sign_form">
 				{% csrf_token %}
+				<div class="text-primary"> {% for message in messages %}
+					{{ message }}
+				  {% endfor %}</div>
 				<div class="google-btn">
 					<button type="submit" class="btn-block"><img src="{% static 'img/google_logo.png' %}"/> Continue with Google</button>
 				</div>
-			  <div class="form-group">
-			    <label for="username">username</label>
-			    <input name="username", type="text" class="form-control input" placeholder="username">
-			  </div>
 			  <div class="form-group">
 			    <label for="pwd">EMAIL</label>
 			    <input name="email", type="text" class="form-control input" placeholder="Enter your email adress...">
