--- a/templates/api_docs/comment_api/docs_base.html
+++ b/templates/api_docs/comment_api/docs_base.html
@@ -86,7 +86,7 @@
   <!-- docs nav -->
 
   <main id="comment_main">
-    <div class="container-fluidx">
+    <div class="container container-fluidx">
       <div class="row top-row ">
         <div class="col-lg-8 col-md-7 col-sm-12 mb-3">
           <div class="rowx no-wrap">
