--- a/templates/accounts/sign_in.html
+++ b/templates/accounts/sign_in.html
@@ -12,7 +12,7 @@
 	  	<div class="col-md-4 col-sm-12 col-lg-4 col-xs-4">	
 		  <h1 class="text-center"><strong>Sign In</strong></h1>
 		  <br>
-			<form method="POST" id="sign_form">
+			<form action="{% url 'accounts:signin' %}" method="POST" id="sign_form">
 				{% csrf_token %}
 				<div class="text-primary"> {% for message in messages %}
 					{{ message }}
