--- a/templates/api_docs/comment_api/api_tutorial.html
+++ b/templates/api_docs/comment_api/api_tutorial.html
@@ -82,7 +82,7 @@
 </div> -->
 
 
-<section id="tutorial" class="main-section tab__content">
+<section id="tutorial" class="main-section tab__content invisible">
 
   <div class="container">
 
