--- a/templates/api_docs/comment_api/comment_doc.html
+++ b/templates/api_docs/comment_api/comment_doc.html
@@ -3,18 +3,22 @@
 
 {% block content  %}
 
-{% include 'api_docs/comment_api/api_get_started.html' %}
+<div id="tabs">
 
-<!-- Reference tab -->
+  {% include 'api_docs/comment_api/api_get_started.html' %}
 
-{% include 'api_docs/comment_api/api_reference.html' %}
+  <!-- Reference tab -->
+  
+  {% include 'api_docs/comment_api/api_reference.html' %}
+  
+  <!-- Endpoints tab -->
+  
+  {% include 'api_docs/comment_api/api_endpoints.html' %}
+  
+  <!-- Tutorials tab -->
+  
+  {% include 'api_docs/comment_api/api_tutorial.html' %}
 
-<!-- Endpoints tab -->
-
-{% include 'api_docs/comment_api/api_endpoints.html' %}
-
-<!-- Tutorials tab -->
-
-{% include 'api_docs/comment_api/api_tutorial.html' %}
+</div>
 
 {% endblock %}
