--- a/templates/api_docs/comment_api/api_reference.html
+++ b/templates/api_docs/comment_api/api_reference.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-<div id="reference" class="tab__content col px-0 px-md-3 px-lg-5">
+<div id="reference" class="tab__content col px-0 px-md-3 px-lg-5 invisible">
   <div class="container-fluid d-flex flex-column flex-md-row">
     <div class="refNav col-12 col-md-5 col-lg-3">
       <div class="ref__search__form d-flex align-items-center">
