compiled sass again

--- a/static/assets/sass/pages/_setup-comment-api.scss
+++ b/static/assets/sass/pages/_setup-comment-api.scss
@@ -556,6 +556,7 @@ p {
         }
 
         .comment-api-content{
+          opacity: 1;
             // transform: translateX(-30px);
             // -webkit-transform: translateX(-30px);
             // -moz-transform: translateX(-30px);
@@ -729,7 +730,7 @@ p {
         }
 
         #other__links_div {
-            // top: 55%;
+           opacity: 1;
         }
 
     }
