made hire consultant a tab under docs

--- a/templates/api_docs/comment_api/comment_doc.html
+++ b/templates/api_docs/comment_api/comment_doc.html
@@ -19,6 +19,10 @@
   
   {% include 'api_docs/comment_api/api_tutorial.html' %}
 
+  <!-- Hire consultant tab -->
+
+  {% include 'api_docs/comment_api/hire_consultant.html' %}
+
 </div>
 
 {% endblock %}
