--- a/templates/api_docs/comment_api/docs_base.html
+++ b/templates/api_docs/comment_api/docs_base.html
@@ -195,7 +195,7 @@
       </div>
 
       <div class="col-lg-2 col-md-3 col-sm-12 m-hidex">
-        <a href="{% url 'consultant' %}" class="hire">Hire a Consultant</a>
+        <a href="#" class="tab__menu__link hire">Hire a Consultant</a>
       </div>
 
     </div>
