--- a/templates/api_docs/comment_api/hire_consultant.html
+++ b/templates/api_docs/comment_api/hire_consultant.html
@@ -1,11 +1,8 @@
-{% extends 'api_docs/comment_api/docs_base.html' %}
-
-
 {% block content %}
 
 {% load static %}
 
-  <div id="hire_consultant">
+  <div id="hire_consultant" class="invisible">
     <div class="block">
       <div class="block__banner">
         <h1 class="block__banner__title">Hire a Consultant</h1>
