--- a/templates/api_docs/docs_base.html
+++ b/templates/api_docs/docs_base.html
@@ -31,7 +31,7 @@
             <li><a href="{% url 'index' %}">Home</a></li>
             <li><a href="{% url 'about' %}">About us</a></li>
             <li><a href="{% url 'contact' %}">Contact us</a></li>
-            <li><a href="{% url 'commentdocs' %}">Documentation</a></li>
+            <li><a href="{% url 'docs' %}">Documentation</a></li>
           </ul>
         </nav>
 
@@ -62,7 +62,7 @@
                 <li><a href="{% url 'index' %}"><b>Home</b></a></li>
                 <li><a href="{% url 'about' %}"><b>About us</b></a></li>
                 <li><a href="{% url 'contact' %}"><b>Contact us</b></a></li>
-                <li><a href="{% url 'commentdocs' %}"><b>Documentation</b></a></li>
+                <li><a href="{% url 'docs' %}"><b>Documentation</b></a></li>
                 <li><a href="{% url 'signin' %}"><b>Sign in</b></a></li>
                 <li><a href="{% url 'signup' %}"><b>Sign Up</b></a></li>
                 <li>
