mobile tabs now working

--- a/templates/api_docs/docs_base.html
+++ b/templates/api_docs/docs_base.html
@@ -154,18 +154,20 @@
     <div class="ms-links-div">
 
       <div class="row1">
-        <a href="#" class="tab ms-links active">Introduction</a>
+        <a href="#" class="mobile__tab__menu__link tab ms-links active">Introduction</a>
 
-        <a href="#" class="tab ms-links">API Reference</a>
+        <a href="#" class="mobile__tab__menu__link tab ms-links">API Reference</a>
 
-        <a href="#" class="tab ms-links">Endpoints</a>
+        <a href="#" class="mobile__tab__menu__link tab ms-links">Endpoints</a>
 
       </div>
 
       <div class="row2">
         <!-- <a href="#" class="ms-links">Video Guide</a> -->
 
-        <a href="#" class="tab ms-links">Tutorial</a>
+        <a href="#" class="mobile__tab__menu__link tab ms-links">Tutorial</a>
+
+        <a href="#" class="mobile__tab__menu__link tab ms-links" style="display: none;"></a>
 
       </div>
 
