--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -27,7 +27,7 @@
 			  <li><a href="{% url 'index' %}">Home</a></li>
 			  <li><a href="{% url 'about' %}">About us</a></li>
 			  <li><a href="{% url 'contact' %}">Contact us</a></li>
-			  <li><a href="{% url 'commentdocs' %}">Documentation</a></li>
+			  <li><a href="{% url 'docs' %}">Documentation</a></li>
 			</ul>
 		  </nav>
 
