--- a/static/assets/sass/dashboard/_layout.scss
+++ b/static/assets/sass/dashboard/_layout.scss
@@ -19,7 +19,7 @@
       margin-left: 0px;
     }
     &::-webkit-scrollbar {
-      width: 5px;
+      width: 4px;
     }
     /* Track */
     &::-webkit-scrollbar-track {
@@ -32,6 +32,33 @@
       border-radius: 5px;
     }
     &__section{
+
+      a {
+        color: $secondary-color;
+
+        &:hover {
+          color: lighten($color: $theme-color, $amount: 40);
+        }
+      }
+
+      a.inactive {
+        color: darken($color: $tetiary-color, $amount: 20);
+
+        &:hover {
+          color: lighten($color: $theme-color, $amount: 30);
+        }
+      }
+
+      & > div.sidebar__section__header > ul > button {
+
+        display: flex;
+        align-items: center;
+
+        a {
+          color: $theme-color
+        }
+
+      } 
 
       &__header{
         padding: 40px 0px 20px 0px;
@@ -68,6 +95,7 @@
                 margin-right: 15px;
               }
             }
+          
             
             p{
               display: inline;
@@ -91,7 +119,7 @@
             }
             span{
               font-size: 30px;
-              margin-right: 17px;
+              margin-right: 10px;
             }
           }
         }
@@ -143,6 +171,7 @@
       }
     }
   }
+
   .content{
     height: 100%;
     width: inherit;
