--- a/templates/user_dashboard/dash_base.html
+++ b/templates/user_dashboard/dash_base.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
   <link rel="stylesheet" href=" https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
   <link rel="stylesheet" href="{% static 'css/style.min.css'%}">
   <title>MicroAPI - Dashboard</title>
@@ -31,26 +32,30 @@
           <h5>Projects <i class="fas fa-angle-up"></i></h5>
           <ul class="sidebar__section__header__list">
             <li>
-              <div class="pretty p-icon">
+              <a href="#">Acme Project</a>
+              <!-- <div class="pretty p-icon">
                 <input type="checkbox" />
                 <div class="state">
                   <i class="icon material-icons">done</i>
                   <label><span class="spacer"></span>Acme Project's</label>
                 </div>
-              </div>
+              </div> -->
             </li>
 
             <li>
-              <div class="pretty p-icon">
+              <a href="#" class="inactive">Sentry's Prrojects</a>
+
+              <!-- <div class="pretty p-icon">
                 <input type="checkbox" />
                 <div class="state">
                   <i class="icon material-icons">done</i>
                   <label><span class="spacer"></span>Sentry Project's</label>
                 </div>
-              </div>
+              </div> -->
+
             </li>
             <button class="add-new"><span>+</span>
-              <p>New project</p>
+              <a href="#">New project</a>
             </button>
           </ul>
         </div>
@@ -59,13 +64,13 @@
             <h5>Tools <i class="fas fa-angle-up"></i></h5>
             <ul class="sidebar__section__content__sub__list">
               <li>
-                <p>MicroAPI</p>
+                <a href="#">MicroAPI</a>
               </li>
               <li>
-                <p>Frontends</p>
+                <a href="#">Frontends</a>
               </li>
               <li>
-                <p>Database</p>
+                <a href="#">Database</a>
               </li>
             </ul>
           </div>
@@ -73,10 +78,10 @@
             <h5 class="sidebar__section__content__sub__title">Accounts <i class="fas fa-angle-up"></i></h5>
             <ul class="sidebar__section__content__sub__list">
               <li>
-                <p>Account settings</p>
+                <a href="#">Account settings</a>
               </li>
               <li>
-                <p>Sign out</p>
+                <a href="#">Sign out</a>
               </li>
             </ul>
           </div>
@@ -84,7 +89,7 @@
             <h5 class="sidebar__section__content__sub__title">Contribute <i class="fas fa-angle-up"></i></h5>
             <ul class="sidebar__section__content__sub__list">
               <li>
-                <p>Contribute to MicroAPI</p>
+                <a href="#">Contribute to MicroAPI</a>
               </li>
             </ul>
           </div>
@@ -113,6 +118,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
 <script src="{% static 'js/dashboard_sidebar.js' %}"></script>
 <script src="{% static 'js/dashboard.js' %}"></script>
+<script src="{% static 'js/configure_api.js' %}"></script>
 </body>
 
 </html>
