base for settings page

--- a/templates/user_dashboard/dash_base.html
+++ b/templates/user_dashboard/dash_base.html
@@ -24,7 +24,7 @@
     <!-- dashboard side bar -->
     <div class="sidebar">
       <div class="sidebar__logo">
-        <a href="../index.html"><img src="{% static 'img/logo-alt.svg' %}" alt=""></a>
+        <a href="{% url 'index' %}"><img src="{% static 'img/logo-alt.svg' %}" alt=""></a>
       </div>
 
       <div class="sidebar__section">
