--- a/static/assets/sass/_layout.scss
+++ b/static/assets/sass/_layout.scss
@@ -42,6 +42,7 @@ header {
       li {
         margin: 0 2%;
         border-bottom: 2px solid transparent;
+        list-style: none;
 
         &:hover {
           border-color: $theme-color;
