--- a/static/assets/sass/dashboard/_layout.scss
+++ b/static/assets/sass/dashboard/_layout.scss
@@ -38,6 +38,7 @@
 
         &:hover {
           color: lighten($color: $theme-color, $amount: 40);
+          text-decoration: none;
         }
       }
 
@@ -46,6 +47,7 @@
 
         &:hover {
           color: lighten($color: $theme-color, $amount: 30);
+          text-decoration: none; 
         }
       }
 
@@ -205,7 +207,7 @@
 
         a{
           line-height: 70px;
-          color: #DADADA;
+          color: grey;
           font-size: 20px;
         }
         
