--- a/templates/api_docs/api_endpoints.html
+++ b/templates/api_docs/api_endpoints.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-<div id="endpoint" class="tab__content invisible">
+<div id="endpoint" class="container tab__content invisible">
   <div class="container-fluid d-flex flex-column flex-md-row">
     <div class="quicknav col-12 col-md-5 col-lg-3 px-0">
       <div class="shortcut__search__form d-flex align-items-center">
