--- a/templates/api_docs/docs_base.html
+++ b/templates/api_docs/docs_base.html
@@ -112,8 +112,8 @@
 	        <div class="setup_comment__navlink__container">
 	        <div class="setup_comment__navlink__container__1">
 	            <a class="tab__menu__link s-links active">Introduction</a>
-	            <a class="tab__menu__link s-links">Api Interferance</a>
-	            <a class="tab__menu__link s-links">Video Guide</a>
+	            <a class="tab__menu__link s-links">API reference</a>
+	            <a class="tab__menu__link s-links">Endpoints</a>
 	            <a class="tab__menu__link s-links">Tutorial</a>
 	        </div>
 	        <div class="setup_comment__navlink__container__2"><a class="tab__menu__link s-links">Hire a Consultant</a></div>
