fixed font inconsistencies and align views

--- a/templates/api_docs/hire_consultant.html
+++ b/templates/api_docs/hire_consultant.html
@@ -59,7 +59,7 @@
           <div class="input_container"><label for="phone">Phone Number</label><input type="tel"></div>
           <div class="input_container"><label for="date">Set a Date</label><input type="date" value="2018-07-22"
               min="2018-01-01" max="2050-12-31"></div>
-          <div class="select_container">
+          <div class="select_container pt-5">
             <p>Contact me by</p>
             <div class="select_container--radio">
               <div>
@@ -72,7 +72,7 @@
               </div>
             </div>
           </div>
-          <div class="select_container">
+          <div class="select_container  pt-3">
             <p>Organization</p>
             <div class="select_container--radio">
               <div>
@@ -85,7 +85,7 @@
               </div>
             </div>
           </div>
-          <div class="select_container">
+          <div class="select_container  pt-3">
             <p>What service?</p>
             <div class="select_container--checkbox">
               <div>
@@ -102,7 +102,7 @@
               </div>
             </div>
           </div>
-          <div class="select_container">
+          <div class="select_container  pt-3">
             <p class="select_container--textfield">Addition services not listed here?</p>
             <textarea name="message"></textarea>
           </div>
