index_views responsiveness fixed bugs too

--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -101,16 +101,16 @@
                 </div>
                 <div class="item-ten__image-container">
                 <div>
-                  <a href="#"><img class="img-fluid  item-ten__image-container__img" src="{% static 'img/react-icon.png' %}"></a> 
+                  <img class="img-fluid  item-ten__image-container__img" src="{% static 'img/react-icon.png' %}">
                 </div>
                 <div>
-                  <a href="#"><img class="img-fluid  item-ten__image-container__img" src="{% static 'img/ember-icon.png' %}"></a>
+                 <img class="img-fluid  item-ten__image-container__img" src="{% static 'img/ember-icon.png' %}">
                 </div>
                 <div>
-                  <a href="#"><img class="img-fluid  item-ten__image-container__img" src="{% static 'img/angular-icon.png' %}"></a>
+                 <img class="img-fluid  item-ten__image-container__img" src="{% static 'img/angular-icon.png' %}">
                 </div>
                 <div>
-                  <a href="#"><img class="img-fluid  item-ten__image-container__img" src="{% static 'img/gatsby-icon.png' %}"></a>
+                  <img class="img-fluid  item-ten__image-container__img" src="{% static 'img/gatsby-icon.png' %}">
                 </div>
               </div>
             </div>
