--- a/static/assets/sass/pages/_index.scss
+++ b/static/assets/sass/pages/_index.scss
@@ -3,7 +3,12 @@
   padding: 0;
   box-sizing: border-box;
  }
- 
+ $minitab:1200px;
+ @mixin minitab {
+  @media only screen and (max-width: #{$minitab}) {
+      @content;
+  }
+}
  $tablet: 700px;
  @mixin tablet {
      @media (max-width: #{$tablet}) {
@@ -173,15 +178,19 @@
    justify-content: end;
    align-items: center;
    background-color: $tetiary-color;
+
    @include tablet{
     padding: 0 0.5em;
   }
-
+  @include minitab{
+    padding:0em 2em;
+  }
   .item-one__header{
     font-size:25px !important;
 
   }
    .item-one__text{
+     text-decoration: none;
     margin-bottom:3em !important;
 
   }
@@ -265,11 +274,19 @@
  
  .item-eleven{
    input{
+     width:30%;
     padding: 0.5em 0em;
     padding-right: 2.5em;
     padding-left: 0.3em;
     border:0.5px solid gray;
     outline:none;
+    
+    @include tablet{
+      width:60% !important;
+      display:block;
+      margin:auto
+      }
+      
    }
   .started_btn{
 padding: 0.6em 2.5em;
