--- a/templates/user_dashboard/dashboard.html
+++ b/templates/user_dashboard/dashboard.html
@@ -102,7 +102,7 @@
                             </p>
                           </div>
                           <div class="api__box__buttons">
-                            <a href="{% url 'dashboard:configure_api' %}"><button class="secondary-btn">+ Add API</button></a>
+                            <a href="" class="add_api" id="add_to_active"><button class="secondary-btn">+ Add API {{ all_api.id }} </button> {{ all_api.id }} </a>
                             <!-- <input type="radio" name="" id=""> -->
                             <!-- success -->
                             <div class="prindex.html pretty p-default p-round p-toggle">
@@ -129,5 +129,25 @@
           </div>
         </div>
     </div>
+<script type="text/javascript">
+$('.add_api').click(function() {
+var id;
+id = $(this).attr("add_to_active");
+$.ajax(
+  {
+    type = 'POST',
+    url = 'active_api',
+    data: {
+      all_api_id : id
+    },
+    success: function(data) {
+      
+    }
+  }
+)
+})
+
+
+</script>
 
 {% endblock %}
