--- a/templates/user_dashboard/dashboard.html
+++ b/templates/user_dashboard/dashboard.html
@@ -104,7 +104,7 @@
                             </p>
                           </div>
                           <div class="api__box__buttons">
-                            <a href="" class="add_api" id="add_to_active"><button class="secondary-btn">+ Add API {{ all_api.id }} </button> {{ all_api.id }} </a>
+                            <a href="" class="add_api" id="add_to_active"><button class="secondary-btn">+ Add API</button></a>
                             <!-- <input type="radio" name="" id=""> -->
                             <!-- success -->
                             <div class="prindex.html pretty p-default p-round p-toggle">
@@ -143,7 +143,7 @@ $.ajax(
       all_api_id : id
     },
     success: function(data) {
-      
+
     }
   }
 )
