--- a/templates/user_dashboard/dash_base.html
+++ b/templates/user_dashboard/dash_base.html
@@ -144,7 +144,9 @@
                 </div>
                 <div class="modal-body">
 
-                  
+                  <div class="notification-content">
+
+                  </div>
 
                 </div>
                 <!-- <div class="modal-footer">
