--- a/static/assets/sass/dashboard/_settings.scss
+++ b/static/assets/sass/dashboard/_settings.scss
@@ -106,7 +106,7 @@
 
               input {
                 width: 100%;
-                padding: .3rem;
+                padding: 0.3rem;
 
                 &:focus {
                   outline: none;
