Added recover-pass and logout view

--- a/templates/accounts/recover_password.html
+++ b/templates/accounts/recover_password.html
@@ -8,10 +8,19 @@
   <body id ="recover">
 <div class="recover_container">
 <p class="container_word"> Recover password </p>
+<form method="POST" action="{% url 'accounts:recover' %}">
+  {%csrf_token%}
+
+    {%if messages %}
+    <div class="text-warning">
+      {% for message in messages %} {{ message }} {% endfor %}
+    </div>
+    {%endif%}
     <div class="form">
       <label> Email</label>
-      <input type="Email" placeholder="Enter your email address" />
-      <a  href="{% url 'reset_link' %}" class="btn tetiary-btn">Send reset link</a>
+      <input type="email" name="email" placeholder="Enter your email address" required />
+      
+      <input class="btn tetiary-btn" type="submit" value="Send reset link">
       <p class="form_word"> You can also continue with email </p>
     </div>
   
