--- a/templates/accounts/reset_password.html
+++ b/templates/accounts/reset_password.html
@@ -10,9 +10,9 @@
 <p class="container_word"> Reset Your password </p>
     <div class="form">
       <label> Type new password</label>
-      <input type="Email" placeholder="Enter password" />
+      <input type="password" placeholder="Enter password" />
       <label> Type new password one more time</label>
-      <input type="Email" placeholder="Enter password " />
+      <input type="password" placeholder="Enter password " />
       <button class="btn tetiary-btn">Set password</button>
     </div>
   
